# WriteAuto

./: .gitignore  README.md  main.py  pyproject.toml  wa.spec
backend/: __main__.py  bridge.py  config.py  main.py  server.py
backend/agent/: cancellation.py  graph.py  state.py
backend/agent/nodes/: character_fetch.py  content_generation.py  content_judge.py  init_check.py  injection_context.py  injection_foreshadow.py  modify_loop.py
backend/api/: common.py  crud.py  generation.py
backend/db/: __init__.py  chapter_repo.py  character_repo.py  database.py  dependencies.py  foreshadow_repo.py  models.py  novel_repo.py  outline_repo.py
backend/db/repos/: __init__.py  chapter_repo.py  character_repo.py  foreshadow_repo.py  novel_repo.py  plot_node_repo.py  settings_repo.py
backend/llm/: factory.py  openai_provider.py  prompts.py  provider.py
backend/services/: context.py  cursor.py  legality.py  style_extractor.py
backend/storage/: file_manager.py  markdown.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: chapter.js  character.js  client.js  foreshadow.js  generation.js  novel.js  outline.js  settings.js  sse.js
frontend/src/router/: index.js
frontend/src/stores/: chapter.js  character.js  foreshadow.js  generation.js  novel.js  outline.js  settings.js
frontend/src/views/: CharactersView.vue  ForeshadowsView.vue  HomeView.vue  NovelEditorView.vue  OutlineView.vue  SettingsView.vue  (+1 more)
tests/: conftest.py  test_api.py  test_graph.py
tests/test_agent/: test_nodes.py
(+15 files in other folders)
